不足しているMODを追加
追加MOD:
- LaserIO
  - Patchouli
- FTB Quests
  - Item Filters
  - FTB Teams
- CookingForBlockheads
  - Balm
- Entangled

--- a/modlist.html
+++ b/modlist.html
@@ -29,7 +29,7 @@
 <li><a href="https://www.curseforge.com/projects/284497">Iron Jetpacks (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/projects/370890">Just Another Void Dimension</a></li>
 <li><a href="https://www.curseforge.com/projects/324717">Jade 🔍 (by Snownee)</a></li>
-<li><a href="https://www.curseforge.com/projects/583345">Jade Addons (NeoForge) (by Snownee)</a></li>
+<li><a href="https://www.curseforge.com/projects/583345">Jade Addons (Neo/Forge) (by Snownee)</a></li>
 <li><a href="https://www.curseforge.com/projects/898746">Just Enough Mekanism Multiblocks (by gisellevonbingen)</a></li>
 <li><a href="https://www.curseforge.com/projects/417645">Just Enough Professions (JEP) (by Mrbysco, ShyNieke)</a></li>
 <li><a href="https://www.curseforge.com/projects/240630">Just Enough Resources (JER)</a></li>
@@ -46,6 +46,7 @@
 <li><a href="https://www.curseforge.com/projects/60089">Mouse Tweaks (by Ivan Molodetskikh (YaLTeR))</a></li>
 <li><a href="https://www.curseforge.com/projects/604054">Multiblocked (by KilaBash)</a></li>
 <li><a href="https://www.curseforge.com/projects/252848">Nature's Compass (by ChaosTheDude)</a></li>
+<li><a href="https://www.curseforge.com/projects/306770">Patchouli (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/projects/283644">Placebo (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/projects/320926">Scalable Cat's Force</a></li>
 <li><a href="https://www.curseforge.com/projects/432251">Ultimate Solar Panels (by inzheFoP)</a></li>
@@ -53,7 +54,8 @@
 <li><a href="https://www.curseforge.com/projects/946880">Angel Block: Restored (by Broulf)</a></li>
 <li><a href="https://www.curseforge.com/projects/248787">AppleSkin (by squeek)</a></li>
 <li><a href="https://www.curseforge.com/projects/223794">Applied Energistics 2 (by TeamAppliedEnergistics)</a></li>
-<li><a href="https://www.curseforge.com/projects/419699">Architectury API (Fabric/Forge/NeoForge) (by shedaniel)</a></li>
+<li><a href="https://www.curseforge.com/projects/419699">Architectury API (by shedaniel)</a></li>
+<li><a href="https://www.curseforge.com/projects/531761">Balm (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/projects/899487">Better chunk loading[Forge/Fabric] (by Someaddon)</a></li>
 <li><a href="https://www.curseforge.com/projects/551520">Better Fps - Render Distance[Forge] (by Love, Cheese and small house plants)</a></li>
 <li><a href="https://www.curseforge.com/projects/665658">Canary (by AbdElAziz)</a></li>
@@ -63,19 +65,24 @@
 <li><a href="https://www.curseforge.com/projects/1161015">Compact Mekanism Machines (by nekorobi_0)</a></li>
 <li><a href="https://www.curseforge.com/projects/470193">Connectivity (by Someaddons)</a></li>
 <li><a href="https://www.curseforge.com/projects/399558">Construction Wand (by ThetaDev)</a></li>
+<li><a href="https://www.curseforge.com/projects/231484">Cooking for Blockheads (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/projects/326652">Cupboard (by Someaddon)</a></li>
 <li><a href="https://www.curseforge.com/projects/335673">Dank Storage (by Tfarecnim)</a></li>
 <li><a href="https://www.curseforge.com/projects/908741">Embeddium (by embeddedt)</a></li>
 <li><a href="https://www.curseforge.com/projects/532169">Energy Meter (by AlmostReliable)</a></li>
+<li><a href="https://www.curseforge.com/projects/301034">Entangled (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/projects/448233">Entity Culling Fabric/Forge (by tr7zw)</a></li>
 <li><a href="https://www.curseforge.com/projects/429235">FerriteCore ((Neo)Forge) (by malte0811)</a></li>
 <li><a href="https://www.curseforge.com/projects/951140">Francium (by TeamPotato)</a></li>
 <li><a href="https://www.curseforge.com/projects/404465">FTB Library (Forge) (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/projects/289412">FTB Quests (Forge) (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/projects/404468">FTB Teams (Forge) (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/projects/386134">FTB Ultimine (Forge) (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/projects/391656">Full Brightness Toggle (by Rick South)</a></li>
 <li><a href="https://www.curseforge.com/projects/380998">Integrated NBT (by Rin Tepis)</a></li>
 <li><a href="https://www.curseforge.com/projects/434516">inzhefop's Core (by inzheFoP)</a></li>
 <li><a href="https://www.curseforge.com/projects/228756">Iron Chests (by cpw, alexbegt, progwml6)</a></li>
+<li><a href="https://www.curseforge.com/projects/309674">Item Filters (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/projects/242223">Just Enough Calculation (by Towdium, MorningSage, 6LeoY)</a></li>
 <li><a href="https://www.curseforge.com/projects/238222">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/projects/265917">JEI Integration (by SnowShock35)</a></li>
@@ -85,12 +92,12 @@
 <li><a href="https://www.curseforge.com/projects/351264">Kotlin for Forge</a></li>
 <li><a href="https://www.curseforge.com/projects/238086">KubeJS (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/projects/418651">KubeJS Mekanism (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/projects/626839">LaserIO (by Direwolf20)</a></li>
 <li><a href="https://www.curseforge.com/projects/489843">Lazier AE2 (by AlmostReliable)</a></li>
 <li><a href="https://www.curseforge.com/projects/460819">Lazy DataFixerUpper(LazyDFU) [FORGE] (by tuxed)</a></li>
 <li><a href="https://www.curseforge.com/projects/679177">libIPN (by blackd/mirinimi)</a></li>
 <li><a href="https://www.curseforge.com/projects/686055">Mekanism Tweaks (by nin8995)</a></li>
 <li><a href="https://www.curseforge.com/projects/983940">Mekanism Jetpack Speed Tweaks (by Squeeglii)</a></li>
-<li><a href="https://www.curseforge.com/projects/688367">ME Requester (by AlmostReliable)</a></li>
 <li><a href="https://www.curseforge.com/projects/676136">Model Gap Fix (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/projects/790626">ModernFix (by embeddedt)</a></li>
 <li><a href="https://www.curseforge.com/projects/948812">Noisium Legacy</a></li>
